--- a/Summer Vacation Warming Up/templates/base.html
+++ b/Summer Vacation Warming Up/templates/base.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     {% block title %}
     {% endblock title %}
-    <style>
-        body {
-            width: 100%;
-            height: 100%;
-
-        }
-    </style>
+    {% load static %}
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}" />
 </head>
 <body>
 
