--- a/Summer Vacation Warming Up/templates/create.html
+++ b/Summer Vacation Warming Up/templates/create.html
@@ -8,10 +8,16 @@
 {% block body %}
 <h2>Create page</h2>
 
-<form action="#" method="POST">
+<form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <p>Title : </p>
     <input type="text" name="subject">
+
+    <p>Image : </p>
+    <input type="file" name="image">
+    <!-- {{form.image}}
+    <iframe src="{{i.image}}" ></iframe> -->
+    
     <p>Content : </p>
     <input type="text" name="content">
     <p>Date : </p>
