--- a/Summer Vacation Warming Up/templates/detail.html
+++ b/Summer Vacation Warming Up/templates/detail.html
@@ -7,6 +7,7 @@
 
 {% block body %}
     <h> detail page </h>
+    <img class="image" src="{{detail_key.image.url}}"/>
     {{detail_key.subject}}
     {{detail_key.content}}
     {{detail_key.create_date}}
