--- a/Summer Vacation Warming Up/static/base.css
+++ b/Summer Vacation Warming Up/static/base.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 150%;
     background-color: #BBD1F8;
     font-family: 'Nanum Pen Script', cursive;
     font-size: large;
@@ -14,10 +14,10 @@ html, body {
 .main_div {
     width: 80%;
     height: 100%;
-    background-color: khaki;
+    background-color: BBD1F8;
     
     position: absolute;
-    left: 7.5%;
+    left: 5%;
     padding: 2%;
 
     display: flex;
@@ -35,21 +35,73 @@ html, body {
 
 }
 
-
-.row_div {
-    display: flex;
-    flex-direction: row;
+.information-tip{
+    cursor: default;
 }
 
-.col_div {
-    display: flex;
-    flex-direction: column;
+.information-tip:before{
+	font-weight: bold;
 }
 
-.font_box {
-    font-size: 30px;
-    font-weight: bold;
-    padding: 3%; 
-    background-color: rgb(164,218,215);
-    text-align: center;
+.information-tip:hover p{
+	display:block;
+	transform-origin: 100% 0%;
+	-webkit-animation: fadeIn 1.0s ease-in-out;
+	animation: fadeIn 1.0s ease-in-out;
 }
+
+.information-tip p{
+    display: none;
+	text-align: center;
+	background-color:yellow;
+	padding:5%;
+    width: 30%;
+    height: 7.5%;
+    position: absolute;
+    margin-top: -25%;
+	border-radius: 10px;
+	/* box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); */
+    right: 30%;
+    /* top: 4%; */
+	color: black;
+    font-size: 120%;
+    line-height: 1.4;
+}
+
+/* 
+.help-tip p:before{
+	position: absolute;
+	content: '';
+	width:0;
+	height: 0;
+	border:6px solid transparent;
+	border-bottom-color:#1E2021;
+	right:10px;
+	top:-12px;
+} */
+
+
+/* .help-tip p:after{
+	width:100%;
+	height:40px;
+	content:'';
+	position: absolute;
+	top:-40px;
+	left:0;
+} */
+
+@-webkit-keyframes fadeIn {
+	0% { 
+		opacity:0; 
+		transform: scale(0.6);
+	}
+	100% {
+		opacity:100%;
+		transform: scale(1);
+	}
+}
+ 
+@keyframes fadeIn {
+	0% { opacity:0; }
+	100% { opacity:100%; }
+}​ 
