feat: add search engine function(complete author & the number of result)

--- a/10th_assignment/week10/week10_app/templates/create.html
+++ b/10th_assignment/week10/week10_app/templates/create.html
@@ -21,4 +21,11 @@ font-size: 200%
         {{form.as_p}}
         <input type="submit" value="작성하기">
     </form>
+    <a style="
+    position: absolute;
+    right: 1%; bottom: 1%;
+    font-size: 180%; font-weight: bolder;
+    color: white;
+    background-color:yellowgreen;"
+    href="{% url 'index' %}">메인으로 돌아가기</a>
 {% endblock contents %}
