--- a/10th_assignment/week10/week10_app/templates/detail.html
+++ b/10th_assignment/week10/week10_app/templates/detail.html
@@ -22,4 +22,11 @@
         <p>작성자 : {{post.author}}</p>
         <p>작성 시간 : {{post.time}}</p>
     </a>
+    <a style="
+    position: absolute;
+    right: 1%; bottom: 1%;
+    font-size: 180%; font-weight: bolder;
+    color: white;
+    background-color:yellowgreen;"
+    href="{% url 'index' %}">메인으로 돌아가기</a>
 {% endblock contents %}
