--- a/django_comment_CD/main/templates/detail.html
+++ b/django_comment_CD/main/templates/detail.html
@@ -48,15 +48,18 @@
                 {{comment.author}} 
                 {{comment.created|date:"D d M Y"}}
                 {{comment}}
+
+                {% if user == author %}
                 <a href="{% url 'comment_update' ppost.id comment.id %}">
                     <button>수정!</button>
                 </a>
                 <a href="{% url 'comment_delete' ppost.id comment.id %}">
                     <button>삭제!</button>
                 </a>
+                {% endif %}
                 <br /><br /> 
             {% endfor %}
-
+            
         </div>
     </div>
 
