--- a/django_comment_CD/main/templates/detail.html
+++ b/django_comment_CD/main/templates/detail.html
@@ -49,13 +49,13 @@
                 {{comment.created|date:"D d M Y"}}
                 {{comment}}
 
-                {% if user == author %}
-                <a href="{% url 'comment_update' ppost.id comment.id %}">
-                    <button>수정!</button>
-                </a>
-                <a href="{% url 'comment_delete' ppost.id comment.id %}">
-                    <button>삭제!</button>
-                </a>
+                {% if user == comment.author %}
+                    <a href="{% url 'comment_update' ppost.id comment.id %}">
+                        <button>수정!</button>
+                    </a>
+                    <a href="{% url 'comment_delete' ppost.id comment.id %}">
+                        <button>삭제!</button>
+                    </a>
                 {% endif %}
                 <br /><br /> 
             {% endfor %}
